initial pass at adding riscv64 support in besu-native
Signed-off-by: Gary Schulte <garyschulte@gmail.com>

--- a/arithmetic/build.gradle
+++ b/arithmetic/build.gradle
@@ -54,6 +54,12 @@ task linuxArm64LibCopy(type: Copy) {
 }
 processResources.dependsOn linuxArm64LibCopy
 
+task linuxRiscv64LibCopy(type: Copy) {
+    from 'build/linux-gnu-riscv64/lib/libeth_arithmetic.so'
+    into 'build/resources/main/linux-riscv64'
+}
+processResources.dependsOn linuxRiscv64LibCopy
+
 jar {
     archiveBaseName = 'besu-native-arithmetic'
     includeEmptyDirs = false
