add riscv lib copy for secp256k1, r1, and ipa-multipoint subprojects
Signed-off-by: Gary Schulte <garyschulte@gmail.com>

--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -47,6 +47,12 @@ task linuxArm64LibCopy(type: Copy) {
 }
 processResources.dependsOn linuxArm64LibCopy
 
+task linuxRiscv64LibCopy(type: Copy) {
+  from 'build/linux-gnu-riscv64/lib/libsecp256k1.so'
+  into 'build/resources/main/linux-riscv64'
+}
+processResources.dependsOn linuxRiscv64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-secp256k1'
   includeEmptyDirs = false
