--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -65,6 +65,12 @@ task linuxArm64LibCopy(type: Copy) {
 }
 processResources.dependsOn linuxArm64LibCopy
 
+task linuxRiscv64LibCopy(type: Copy) {
+  from 'build/linux-gnu-riscv64/lib/libipa_multipoint_jni.so'
+  into 'build/resources/main/linux-riscv64'
+}
+processResources.dependsOn linuxRiscv64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-ipa-multipoint'
   includeEmptyDirs = false
