--- a/secp256r1/build.gradle
+++ b/secp256r1/build.gradle
@@ -64,6 +64,13 @@ task linuxArm64LibCopy(type: Copy) {
 }
 processResources.dependsOn linuxArm64LibCopy
 
+task linuxRiscv64LibCopy(type: Copy) {
+    from 'besu-native-ec/release/linux-gnu-riscv64/libbesu_native_ec.so'
+    from 'besu-native-ec/release/linux-gnu-riscv64/libbesu_native_ec_crypto.so'
+    into 'build/resources/main/linux-riscv64'
+}
+processResources.dependsOn linuxRiscv64LibCopy
+
 jar {
     archiveBaseName = 'besu-native-secp256r1'
     includeEmptyDirs = false
