--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':common')
     implementation 'net.java.dev.jna:jna:5.12.1'
     testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'io.tmio:tuweni-bytes:2.4.2'
@@ -27,23 +28,23 @@ tasks.withType(JavaCompile) {
 
 task macArmLibCopy(type: Copy) {
     from "build/darwin-aarch64/lib/libconstantinebindings.dylib"
-    into 'build/resources/main/darwin-aarch64'
+    into 'build/resources/main/lib/aarch64'
 }
 
 task macLibCopy(type: Copy) {
     from "build/darwin-x86-64/lib/libconstantinebindings.dylib"
-    into 'build/resources/main/darwin-x86-64'
+    into 'build/resources/main/lib/x86-64'
 }
 
 task linuxLibCopy(type: Copy) {
     from "build/linux-gnu-x86_64/lib/libconstantinebindings.so"
-    into 'build/resources/main/linux-gnu-x86_64'
+    into 'build/resources/main/lib/x86-64'
 
 }
 
 task linuxArm64LibCopy(type: Copy) {
     from "build/linux-gnu-aarch64/lib/libconstantinebindings.so"
-    into 'build/resources/main/linux-gnu-aarch64'
+    into 'build/resources/main/lib/aarch64'
 }
 
 processResources.dependsOn macArmLibCopy, macLibCopy, linuxLibCopy, linuxArm64LibCopy
