--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright Hyperledger Besu contributors.
+ * Copyright Besu Contributors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -13,12 +13,24 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-rootProject.name='besu-native'
-include 'common'
-include 'arithmetic'
-include 'blake2bf'
-include 'ipa-multipoint'
-include 'secp256k1'
-include 'secp256r1'
-include 'gnark'
-include 'constantine'
+plugins {
+    id 'java-library'
+}
+
+dependencies {
+    implementation 'net.java.dev.jna:jna:5.12.1'
+}
+jar {
+    archiveBaseName = 'common'
+    includeEmptyDirs = false
+    manifest {
+        attributes(
+                'Specification-Title': archiveBaseName,
+                'Specification-Version': project.version,
+                'Implementation-Title': archiveBaseName,
+                'Implementation-Version': project.version,
+                'Automatic-Module-Name': 'org.hyperledger.besu.nativelib.common'
+        )
+    }
+}
+
