--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -472,6 +472,10 @@ jobs:
         with:
           name: jars-constantine
           path: constantine/build/libs
+      - uses: actions/upload-artifact@v4
+        with:
+          name: jars-common
+          path: common/build/libs
       - name: gradle publish
         uses: gradle/gradle-build-action@v2
         if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
