--- a/secp256r1/build.gradle
+++ b/secp256r1/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'io.tmio:tuweni-bytes:2.4.2'
+    testImplementation 'io.tmio:tuweni-units:2.4.2'
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
