support linux and darwin targets for boringssl_jni
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/boringssl/boringssl_jni/Makefile
+++ b/boringssl/boringssl_jni/Makefile
@@ -1,15 +1,29 @@
-# Name of the output JNI-compatible shared library (macOS uses .dylib)
-LIB_NAME = libp256verify.dylib
+# Detect platform and architecture
+UNAME_S := $(shell uname -s)
+UNAME_M := $(shell uname -m)
+
+# Determine shared library extension and dynamic link flags
+ifeq ($(UNAME_S),Darwin)
+    LIB_EXT = dylib
+    JNI_OS_DIR = darwin
+    CC ?= clang
+    LDFLAGS = -dynamiclib -undefined dynamic_lookup
+else
+    LIB_EXT = so
+    JNI_OS_DIR = linux
+    CC ?= gcc
+    LDFLAGS = -shared
+endif
+
+LIB_NAME = libp256verify.$(LIB_EXT)
 
 # Directories
 BSSL_DIR = ../google-boringssl
 BSSL_BUILD_DIR = $(BSSL_DIR)/build
-INCLUDES = -I$(BSSL_DIR)/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/darwin
+INCLUDES = -I$(BSSL_DIR)/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/$(JNI_OS_DIR)
 
-# Tools and flags
-CC = clang
+# Flags
 CFLAGS = -O2 -fPIC $(INCLUDES)
-LDFLAGS = -dynamiclib -undefined dynamic_lookup
 LIBS = $(BSSL_BUILD_DIR)/libcrypto.a
 
 # Source and object files
@@ -19,15 +33,12 @@ OBJS = $(SRCS:.c=.o)
 # Default target
 all: $(LIB_NAME)
 
-# Build shared library
 $(LIB_NAME): $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
-# Compile source files
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-# Clean rule
 clean:
 	rm -f $(OBJS) $(LIB_NAME)
 
