interim commit, prior to an interface refactor for p256Verify
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/boringssl/boringssl_jni/Makefile
+++ b/boringssl/boringssl_jni/Makefile
@@ -15,9 +15,8 @@ else
     LDFLAGS = -shared
 endif
 
-LIB_NAME = libp256verify.$(LIB_EXT)
-
 # Directories
+BUILD_DIR = build
 BSSL_DIR = ../google-boringssl
 BSSL_BUILD_DIR = $(BSSL_DIR)/build
 INCLUDES = -I$(BSSL_DIR)/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/$(JNI_OS_DIR)
@@ -26,21 +25,26 @@ INCLUDES = -I$(BSSL_DIR)/include -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/$
 CFLAGS = -O2 -fPIC $(INCLUDES)
 LIBS = $(BSSL_BUILD_DIR)/libcrypto.a
 
-# Source and object files
+# Files
+LIB_NAME = libp256verify.$(LIB_EXT)
 SRCS = p256_verify.c
 OBJS = $(SRCS:.c=.o)
+BUILD_OBJS = $(addprefix $(BUILD_DIR)/, $(OBJS))
+BUILD_LIB = $(BUILD_DIR)/$(LIB_NAME)
 
 # Default target
-all: $(LIB_NAME)
+all: $(BUILD_DIR) $(BUILD_LIB)
 
-$(LIB_NAME): $(OBJS)
+$(BUILD_DIR):
+	mkdir -p $@
+
+$(BUILD_LIB): $(BUILD_OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
-%.o: %.c
+$(BUILD_DIR)/%.o: %.c | $(BUILD_DIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(LIB_NAME)
+	rm -rf $(BUILD_DIR)
 
 .PHONY: all clean
-
