--- a/boringssl/build.gradle
+++ b/boringssl/build.gradle
@@ -22,6 +22,7 @@ plugins {
 dependencies {
     implementation 'net.java.dev.jna:jna:5.12.1'
     implementation project(':common')
+    testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'net.java.dev.jna:jna:5.12.1'
     testImplementation 'io.tmio:tuweni-bytes:2.4.2'
     testImplementation 'io.tmio:tuweni-units:2.4.2'
