--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -21,11 +21,14 @@ plugins {
 
 dependencies {
   implementation project(':common')
+  testImplementation 'com.google.guava:guava:31.1-jre'
   implementation 'net.java.dev.jna:jna:5.12.1'
   testImplementation 'net.java.dev.jna:jna:5.12.1'
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.22.0'
   testImplementation 'org.mockito:mockito-core:4.4.0'
+  testImplementation 'io.tmio:tuweni-bytes:2.4.2'
+  testImplementation 'io.tmio:tuweni-units:2.4.2'
 }
 
 task macArmLibCopy(type: Copy) {
