--- a/constantine/build.gradle
+++ b/constantine/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation project(':common')
     implementation 'net.java.dev.jna:jna:5.12.1'
     testImplementation 'com.google.guava:guava:31.1-jre'
-    testImplementation 'io.tmio:tuweni-bytes:2.4.2'
+    testImplementation 'io.consensys.tuweni:tuweni-bytes:2.7.1'
     testImplementation 'junit:junit:4.13.2'
 }
 
