--- a/arithmetic/build.gradle
+++ b/arithmetic/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation project(':common')
     implementation 'net.java.dev.jna:jna:5.12.1'
     testImplementation 'com.google.guava:guava:31.1-jre'
-    testImplementation 'io.tmio:tuweni-bytes:2.4.2'
+    testImplementation 'io.consensys.tuweni:tuweni-bytes:2.7.1'
     testImplementation 'org.assertj:assertj-core:3.22.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
