--- a/gnark/build.gradle
+++ b/gnark/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation project(':common')
     testImplementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'net.java.dev.jna:jna:5.12.1'
-    testImplementation 'io.tmio:tuweni-bytes:2.4.2'
+    testImplementation 'io.consensys.tuweni:tuweni-bytes:2.7.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.assertj:assertj-core:3.22.0'
     testImplementation 'org.mockito:mockito-core:4.4.0'
