--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -27,8 +27,8 @@ dependencies {
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.22.0'
   testImplementation 'org.mockito:mockito-core:4.4.0'
-  testImplementation 'io.tmio:tuweni-bytes:2.4.2'
-  testImplementation 'io.tmio:tuweni-units:2.4.2'
+  testImplementation 'io.consensys.tuweni:tuweni-bytes:2.7.1'
+  testImplementation 'io.consensys.tuweni:tuweni-units:2.7.1'
 }
 
 task macArmLibCopy(type: Copy) {
