--- a/gnark/build.gradle
+++ b/gnark/build.gradle
@@ -34,6 +34,9 @@ task macArmLibCopy(type: Copy) {
     from 'build/darwin-aarch64/lib/libgnark_jni.dylib'
     from 'build/darwin-aarch64/lib/libgnark_eip_2537.dylib'
     from 'build/darwin-aarch64/lib/libgnark_eip_196.dylib'
+    from 'build/darwin-aarch64/lib/libgnark_jni.a'
+    from 'build/darwin-aarch64/lib/libgnark_eip_2537.a'
+    from 'build/darwin-aarch64/lib/libgnark_eip_196.a'
     into 'build/resources/main/lib/aarch64'
 }
 processResources.dependsOn macArmLibCopy
@@ -42,6 +45,9 @@ task macLibCopy(type: Copy) {
     from 'build/darwin-x86-64/lib/libgnark_jni.dylib'
     from 'build/darwin-x86-64/lib/libgnark_eip_2537.dylib'
     from 'build/darwin-x86-64/lib/libgnark_eip_196.dylib'
+    from 'build/darwin-x86-64/lib/libgnark_jni.a'
+    from 'build/darwin-x86-64/lib/libgnark_eip_2537.a'
+    from 'build/darwin-x86-64/lib/libgnark_eip_196.a'
     into 'build/resources/main/lib/x86-64'
 }
 processResources.dependsOn macLibCopy
@@ -50,6 +56,9 @@ task linuxLibCopy(type: Copy) {
     from 'build/linux-gnu-x86_64/lib/libgnark_jni.so'
     from 'build/linux-gnu-x86_64/lib/libgnark_eip_2537.so'
     from 'build/linux-gnu-x86_64/lib/libgnark_eip_196.so'
+    from 'build/linux-gnu-x86_64/lib/libgnark_jni.a'
+    from 'build/linux-gnu-x86_64/lib/libgnark_eip_2537.a'
+    from 'build/linux-gnu-x86_64/lib/libgnark_eip_196.a'
     into 'build/resources/main/lib/x86-64'
 }
 processResources.dependsOn linuxLibCopy
@@ -58,6 +67,9 @@ task linuxArm64LibCopy(type: Copy) {
     from 'build/linux-gnu-aarch64/lib/libgnark_jni.so'
     from 'build/linux-gnu-aarch64/lib/libgnark_eip_2537.so'
     from 'build/linux-gnu-aarch64/lib/libgnark_eip_196.so'
+    from 'build/linux-gnu-aarch64/lib/libgnark_jni.a'
+    from 'build/linux-gnu-aarch64/lib/libgnark_eip_2537.a'
+    from 'build/linux-gnu-aarch64/lib/libgnark_eip_196.a'
     into 'build/resources/main/lib/aarch64'
 }
 processResources.dependsOn linuxArm64LibCopy
@@ -66,6 +78,9 @@ task linuxRiscv64LibCopy(type: Copy) {
     from 'build/linux-gnu-riscv64/lib/libgnark_jni.so'
     from 'build/linux-gnu-riscv64/lib/libgnark_eip_2537.so'
     from 'build/linux-gnu-riscv64/lib/libgnark_eip_196.so'
+    from 'build/linux-gnu-riscv64/lib/libgnark_jni.a'
+    from 'build/linux-gnu-riscv64/lib/libgnark_eip_2537.a'
+    from 'build/linux-gnu-riscv64/lib/libgnark_eip_196.a'
     into 'build/resources/main/lib/riscv64'
 }
 processResources.dependsOn linuxRiscv64LibCopy
